updated licenses for Prism, correct links in settings menu, set minimum height to 220px to prevent menu from ever getting cut off.

--- a/css/popup.css
+++ b/css/popup.css
@@ -259,6 +259,7 @@ body {
   font-family: "Google Sans", sans-serif;
   font-size: 100%;
   min-width: 400px;
+  min-height: 220px;
   margin: 0 8px;
 }
 
